force-app/main/default/objects/SingleEmail__b/SingleEmail__b.object-meta.xml
<CustomObject>
    <label>SingleEmail</label>
    <pluralLabel>SingleEmails</pluralLabel>
</CustomObject>