force-app/main/default/objects/SingleEmail__b/fields/Fromaddress__c.field-meta.xml
<CustomField>
    <fullName>Fromaddress__c</fullName>
    <label>Fromaddress</label>
    <length>100</length>
    <type>Text</type>
</CustomField>