force-app/main/default/objects/SingleEmail__b/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Team_Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>