force-app/main/default/objects/SingleEmail__b/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
    <relationshipLabel>SingleEmails</relationshipLabel>
    <relationshipName>SingleEmails</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>