force-app/main/default/objects/SingleEmail__b/fields/Team_brokerOfficeCode__c.field-meta.xml
<CustomField>
    <fullName>Team_brokerOfficeCode__c</fullName>
    <label>Team_brokerOfficeCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>