force-app/main/default/objects/SingleEmail__b/fields/TeamOption__c.field-meta.xml
<CustomField>
    <fullName>TeamOption__c</fullName>
    <label>TeamOption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>