force-app/main/default/objects/SingleEmail__b/fields/TeamRequestId__c.field-meta.xml
<CustomField>
    <fullName>TeamRequestId__c</fullName>
    <label>TeamRequestId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>